# GuitarZero

./: .cproject  .gitignore  .project  .projectlinkstore  GuitarZeroMCU.pintool  GuitarZeroMCU.slcp  GuitarZeroMCU.slps  README.md  app.c  main.c  project_imports.xml  readme.md  simple_button_baremetal.slcw
.pdm/: uc.module.setup.CommonProjectPostBuild.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.3.1.20210824.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.3.1.20210824.gcc.slsproj  uc.module.setup.projectSlcw.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.3.1.20210824.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.3.1.20210824.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.3.1.20210824.gcc.slsproj
GNU ARM v10.3.1 - Default/: GuitarZeroMCU.axf  GuitarZeroMCU.map  GuitarZeroMCU.s37  app.d  main.d  makefile  objects.mk  simple_button_baremetal.axf  simple_button_baremetal.hex  simple_button_baremetal.map  simple_button_baremetal.s37  sources.mk  subdir.mk
PCB/: .gitignore  DAC.kicad_sch  FPGA.kicad_sch  FPGA_decoup_capacitors.kicad_sch  GuitarZero.bak  GuitarZero.kicad_pcb  GuitarZero.kicad_prl  GuitarZero.kicad_sch  GuitarZero.kicad_sym  MCU.kicad_sch  PSU.kicad_sch  README.md  fp-info-cache  sym-lib-table
a/: GuitarZero.csv
autogen/: sl_event_handler.c  sl_iostream_handles.c  sl_iostream_handles.h
cmake/: CMakeLists.txt  CMakePresets.json  GuitarZeroMCU.cmake  clean.sh  firstPriceEnv.cmake.example  toolchain.cmake
config/: pin_config.h  (+1 more)
(+380 files in other folders)
